--- a/example/src/endpoint/index.html
+++ b/example/src/endpoint/index.html
@@ -4,6 +4,11 @@
     <meta charset='utf-8'>
     <link rel='icon' href='data:;base64,iVBORw0KGgo='>
     <link rel='stylesheet' href='/static/app.css'>
+    <style>
+        body {
+            user-select: none;
+            -webkit-user-select: none;
+        }</style>
 </head>
 <body>
     <div id='app'></div>
