--- a/example/src/endpoint/index.html
+++ b/example/src/endpoint/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <link rel='icon' href='data:;base64,iVBORw0KGgo='>
-    <link rel='stylesheet' href='/static/app.css'>
+    <link rel='stylesheet' href='./static/app.css'>
     <style>
         body {
             user-select: none;
@@ -13,6 +13,6 @@
 <body>
     <div id='app'></div>
 
-    <script src='/static/app.js'></script>
+    <script src='./static/app.js'></script>
 </body>
 </html>
