chore: update demo

--- a/demo/src/endpoint/index.html
+++ b/demo/src/endpoint/index.html
@@ -8,6 +8,12 @@
     user-select: none;
     -webkit-user-select: none;
   }
+
+  .react-carousel__navigation-button.react-carousel__navigation-button--previous,
+  .react-carousel__navigation-button.react-carousel__navigation-button--next {
+    background: #00f;
+    cursor: pointer;
+  }
   </style>
 </head>
 <body>
